--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "recoil": "^0.7.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
