--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-toastify": "^11.0.5",
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
