--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.24.11",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^4.11.0",
